--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-blob-util": "^0.19.8",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^7.1.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-images-to-pdf": "^0.2.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "tesseract.js": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
